--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-# Xcode
-xcuserdata/
-
-*.xcworkspace
-*.xcuserstate
-!default.xcworkspace
-
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
+*.xcodeproj
